<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>Unicef</groupId>
  <artifactId>Unicef</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

   <dependencies>
	<!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-junit -->
		<dependency>
		    <groupId>net.serenity-bdd</groupId>
		    <artifactId>serenity-junit</artifactId>
		    <version>2.0.58</version>
		</dependency>

	<!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-rest-assured -->
		<dependency>
		    <groupId>net.serenity-bdd</groupId>
		    <artifactId>serenity-rest-assured</artifactId>
		    <version>2.0.58</version>
		</dependency>
		
  <!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-cucumber -->
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-cucumber</artifactId>
            <version>1.9.39</version>
        </dependency>
		

	<!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
		<dependency>
		    <groupId>com.jayway.jsonpath</groupId>
		    <artifactId>json-path</artifactId>
		    <version>2.4.0</version>
		</dependency>
		
		
	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-core</artifactId>
		    <version>2.13.2</version>
		</dependency>
	<!-- https://mvnrepository.com/artifact/log4j/log4j -->
		<dependency>
		    <groupId>log4j</groupId>
		    <artifactId>log4j</artifactId>
		    <version>1.2.17</version>
		</dependency>
		
		
  </dependencies>
  
  
  	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>1.4.1</version>
				<executions>
					<execution>
				<!--  <id>enforce</id>
						<configuration>
							<rules>
								<requireUpperBoundDeps />
							</rules>
						</configuration>
						<goals>
						 	<goal>enforce</goal>   
						</goals>      -->
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<skip>false</skip>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>

					<includes>
				 <include>*/**/VerifyDVAPIs.java</include> 
				<!--  <include>/**/getDataFromCsvFile.java</include> -->

					</includes>   

					<!-- <<forkCount>4</forkCount>
						<reuseForks>true</reuseForks> -->
					<!-- <parallel>methods</parallel>  -->
				 	<!-- <threadCount>10</threadCount>   --> 
					<!-- <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>  -->
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<fork>true</fork>
              <!-- <executable>C:\Program Files\Java\jdk1.8.0_211\bin\javac.exe</executable> -->  
				</configuration>
			</plugin>  
			<plugin>
				<groupId>net.serenity-bdd.maven.plugins</groupId>
				<artifactId>serenity-maven-plugin</artifactId>
				<version>2.0.60</version>
				<dependencies>
					<dependency>
						<!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-core -->
							<groupId>net.serenity-bdd</groupId>
							<artifactId>serenity-core</artifactId>
							<version>2.0.60</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>serenity-reports</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>aggregate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
  
  
  
  
  
</project>
